remove useless code; adjust html

--- a/src/client/css/main.less
+++ b/src/client/css/main.less
@@ -25,28 +25,13 @@ a:focus {
   text-decoration: underline;
 }
 
-.container {
-  .content {
+.container .content {
     margin: 0px auto;
     color: #666;
-  }
-  > footer {
-    text-align: center;
-    .footer-links {
-      margin-top: 10px;
-      li:first-child {
-        padding-left: 0;
-      }
-      li {
-        display: inline;
-        padding: 0 2px;
-      }
-    }
-    p {
-      margin-bottom: 0;
-      color: #777;
-    }
-  }
+}
+
+footer {
+  text-align: center;
 }
 
 /* breadcrumb */
