--- a/src/client/css/main.less
+++ b/src/client/css/main.less
@@ -7,9 +7,13 @@
 
 /* global */
 
+html,
+body {
+  height: 100%;
+}
+
 body {
   padding-top: 60px;
-  padding-bottom: 20px;
 }
 
 ::-moz-selection {background: @selection-color;}
@@ -25,13 +29,30 @@ a:focus {
   text-decoration: underline;
 }
 
+#main-container {
+  min-height:100%;
+  height: auto !important;
+  height: 100%;
+  position: relative;
+}
+
+#container {
+  padding-bottom: 60px;
+}
+
 .container .content {
-    margin: 0px auto;
-    color: #666;
+  margin: 0px auto;
+  color: #666;
 }
 
 footer {
   text-align: center;
+  position: absolute;
+  bottom: 0;
+  height: 40px;
+  line-height: 40px;
+  width: 100%;
+  background-color: #f5f5f5;
 }
 
 /* breadcrumb */
