--- a/src/client/css/main.less
+++ b/src/client/css/main.less
@@ -36,12 +36,8 @@ a:focus {
   position: relative;
 }
 
-#container {
-  padding-bottom: 60px;
-}
-
 .container .content {
-  margin: 0px auto;
+  margin: 0px auto 60px;
   color: #666;
 }
 
