--- a/src/client/admin/css/login.css
+++ b/src/client/admin/css/login.css
@@ -136,3 +136,22 @@
     }
 
 }
+
+/* loading box */
+.loadingbox {
+    text-align: center;
+    height: 24px;
+    line-height: 12px;
+    position: absolute;
+    left: 50%;
+    top: 0;
+    margin-left: -45px;
+    padding: 6px 16px 6px 16px;
+    font-weight: bold;
+    font-size: 12px;
+    color: #333;
+    background: #f9edbe;
+    border: 1px solid #f0c36d;
+    border-radius: 5px;
+    z-index: 10000;
+}
