fix loading tip on the top of page

--- a/src/client/css/main.less
+++ b/src/client/css/main.less
@@ -87,7 +87,7 @@ footer {
   text-align: center;
   height: 24px;
   line-height: 12px;
-  position: absolute;
+  position: fixed;
   left: 50%;
   top: 0;
   margin-left: -45px;
