add Comment for each post

--- a/src/client/css/main.less
+++ b/src/client/css/main.less
@@ -101,6 +101,40 @@ footer {
   z-index: 10000;
 }
 
+/* comment */
+
+#comment-list {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+.comment-author {
+  width: 65px;
+  word-break: break-all;
+  word-wrap: break-word;
+  margin: 10px 0;
+}
+.comment-left-area {
+  text-align: center;
+  margin: 2px 10px 0 0;
+}
+.comment-right-area {
+  overflow: hidden;
+  zoom: 1;
+}
+
+#comment-top {
+  margin-bottom: 30px;
+}
+.comment-date {
+  margin-bottom: 10px;
+}
+
+.del-comment {
+  cursor: pointer;
+  color: red;
+}
+
 /* specified */
 
 .break {
