update about page

--- a/src/client/css/main.less
+++ b/src/client/css/main.less
@@ -173,16 +173,34 @@ blockquote {
   font-size: 3em;
 }
 
-.social-media a {
-  text-decoration: none;
-  margin-left: 8px;
-  color: black;
-  i:hover {
-    text-align: center;
-    -webkit-transition: 1s;
-    -moz-transition: 1s;
-    transition: 1s;
+.social-media {
+  border-left: 5px solid #5bc0de;
+  a {
+    text-decoration: none;
+    margin-left: 8px;
+    color: black;
+    i:hover {
+      text-align: center;
+      -webkit-transition: 1s;
+      -moz-transition: 1s;
+      transition: 1s;
+    }
   }
+  .about-tech-blog {
+    color: #428bca;
+  }
+}
+
+.about-foreword {
+  border-left: 5px solid red;
+}
+
+.about-me {
+  border-left: 5px solid green;
+}
+
+.about-site {
+  border-left: 5px solid #f0ad4e;
 }
 
 .icon-facebook-sign:hover {
